Fix menu visibility

--- a/www/src/styles/bootstrap/style-override.scss
+++ b/www/src/styles/bootstrap/style-override.scss
@@ -76,3 +76,8 @@ mark {
 @each $color in $alert-override-themes {
   @include alert-colors($color);
 }
+
+// Display util (we don't import the whole thing, since we just need this one)
+.hidden {
+  display: none;
+}
